Set timestamp to push messaging default notification.

This CL sets current timestamp to the default notification of push
messaging.
Previously, invalid time was shown when new style notification
chrome://flags/#enable-message-center-new-style-notification
is Enabled (which is ToT default).

TEST=manual
BUG=768695

Change-Id: Id253c990d39a8f8df71472c47137b8252a9186d4
Reviewed-on: https://chromium-review.googlesource.com/683914
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Commit-Queue: Peter Beverloo <peter@chromium.org>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504296}
Former-commit-id: f1b84062d58fd80832fccfb828b2d5c25b6b7388